# semrush_data_processor

./: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Makefile  README.md  app_production.py  deploy.sh  gunicorn_config.py  nginx-semrush-processor.conf  production_config.py  pyproject.toml  repomix-output.txt  repomix-output.xml  run.sh  semrush-processor.service
config/: settings.py
modules/: __init__.py  data_processor.py
templates/: base.html  index.html  results.html
