[project]
name = "semrush-data-processor"
version = "2.0.0"
description = "SEMrush Data Processor - Simplified Flask Version"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "werkzeug>=3.0.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]